# NeuralOps

./: Dockerfile  README.md  alembic.ini  coverage.json  docker-compose.yml  main.py  neuralops_dev.db  pyproject.toml
dashboard/: app.py
neuralops/api/: dependencies.py  main.py  middleware.py
neuralops/api/routers/: drift.py  experiments.py  health.py  models.py  prompts.py
neuralops/core/: config.py  database.py  exceptions.py  logging.py
neuralops/engine/: __init__.py  ab_runner.py  cost_tracker.py  judge.py
neuralops/engine/guardrails/: __init__.py  off_topic_detector.py  pii_detector.py  toxicity_scorer.py
neuralops/migrations/alembic/: env.py
neuralops/migrations/alembic/versions/: 001_initial.py
neuralops/models/: drift_log.py  experiment.py  model_registry.py  prompt.py
tests/: __init__.py  conftest.py
tests/integration/: test_experiment_api.py  test_model_api.py  test_prompt_api.py
tests/unit/: test_ab_runner.py  test_cost_tracker.py  test_drift_service.py  test_experiment_service.py  test_guardrails.py  test_judge.py  test_llm_client.py  test_logging.py  test_model_service.py  test_prompt_service.py
