[project]
name = "neuralops"
version = "0.1.0"
requires-python = ">=3.11"
description = "Production-grade LLMOps platform — prompts versioned, tested, monitored."
authors = [{ name = "Devdutt S", email = "devduttshoji123@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }

dependencies = [
  # Web framework
  "fastapi>=0.115.0,<0.116",
  "uvicorn[standard]>=0.30.0",

  # Database
  "sqlalchemy>=2.0.35,<2.1",
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "aiosqlite>=0.20.0",

  # Config / validation
  "pydantic>=2.9.0,<3.0",
  "pydantic-settings>=2.5.0",
  "python-dotenv>=1.0.0",

  # LLM providers
  "openai>=1.51.0,<2.0",
  "mistralai>=1.1.0,<2.0",

  # Retry + rate limiting
  "tenacity>=9.0.0",
  "slowapi>=0.1.9",

  # Token counting
  "tiktoken>=0.8.0",

  # PII detection
  "presidio-analyzer>=2.2.354",
  "presidio-anonymizer>=2.2.354",
  "spacy>=3.7.0",

  # Toxicity scoring
  "transformers>=4.45.0",
  "torch>=2.4.0",

  # Scheduling + alerting
  "apscheduler>=3.10.4,<4.0",
  "python-telegram-bot[asyncio]>=21.0,<22.0",
  "httpx>=0.27.0,<0.28",

  # Statistics
  "scipy>=1.13.0",
  "numpy>=1.26.0",

  # Dashboard
  "streamlit>=1.39.0",
  "plotly>=5.24.0",
  "pandas>=2.2.0",

  # Logging
  "structlog>=24.4.0",
  "rich>=13.8.0",

  # FastAPI extras
  "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "respx>=0.21.0",
  "anyio>=4.4.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "types-python-dateutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neuralops"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
